# chord-progressions

./: .gitignore  404.html  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt  run.sh  setup.cfg  setup.py  sitemap.xml
.github/workflows/: bump_version.yml  increment_version.yml  publish-to-pypi.yml  run_tests.yml
chord_progressions/: __init__.py  audio.py  chord.py  evaluate.py  evaluator.py  extract.py  extract_harman.py  generate.py  midi.py  pitch.py  progression.py  rhythm.py  solver.py  type_templates.py  utils.py
chord_progressions/extract/: __init__.py  audio.py  midi.py  midi_harman.py
chord_progressions/io/: audio.py  midi.py
discovery/harmonizer/: harmonizer.py  run.sh
discovery/progression_extraction/: __init__.py  aggregate_lmd_matched.py  label_arrangement.py  label_arrangements.py  parallel.py  plot_extracted_chords.py  test_label_arrangement.py
discovery/progression_extraction/docs/: analysis.md
discovery/progression_modeling/: README.md
discovery/progression_modeling/models/: base.py
docs/: analyze.md  extract.md  generate.md  glossary.md  index.md
extract/: index.html
generate/: index.html
glossary/: index.html
progression_extraction/: README.md  hdf5_getters.py  label_arrangement.py  label_arrangements.py  parallel.py  plot_extracted_chords.py
progression_extraction/docs/: chord_extraction.md  model_dataset.md
progression_modeling/models/: first.py  types.py
scripts/: create_chord_classes.py  extract_chords.py  extract_chords_from_audio.py  extract_chords_from_midi.py  generate.py  get_evaluator_sample.py  graph.py  parsimonious_voice_leading.py  wav_to_mp3.sh
search/: search_index.json
tests/: test_chord.py  test_evaluate.py  test_evaluator.py  test_generate.py  test_pitch.py  test_progression.py  test_rhythm.py  test_solver.py  test_type_templates.py  test_utils.py
tests/io/: test_midi.py
